Add missing pipe in GitHub variable usage

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,5 +110,5 @@ jobs:
             -A ${{ inputs.package }}
             || true
         env:
-          NIXPKGS_ALLOW_BROKEN: ${{ inputs.build-broken | '1' }}
+          NIXPKGS_ALLOW_BROKEN: ${{ inputs.build-broken || '1' }}
 
