Fix handling of NIXPKGS_ALLOW_BROKEN

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,7 +108,6 @@ jobs:
           nix-build \
             . \
             -A ${{ inputs.package }}
-            || true
         env:
-          NIXPKGS_ALLOW_BROKEN: ${{ inputs.build-broken || '1' }}
+          NIXPKGS_ALLOW_BROKEN: ${{ (inputs.build-broken && '1') || '0' }}
 
